--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -6,7 +6,7 @@
     "hizbList": "قائمة الأحزاب",
     "khatmaDates": "تواريخ الختمات القادمة",
     "quranRecitation": "دعاء ختم القرآن",
-    "aboutKhatma": "عن الختمة",
+    "aboutKhatma": "عن التطبيق",
     "aboutUs": "عنا",
     "quranReadingTitle": "قراءة القرآن (الجزء {id})",
     "@quranReadingTitle": {
@@ -56,9 +56,9 @@
     "language": "اللغة",
     "currentLanguage": "العربية",
     "pageNavigation": "تنقل الصفحات",
-    "pageInfo": "صفحة {current} من {total}",
+    "pageInfo": "الصفحة {current} من {total}",
     "@pageInfo": {
-        "description": "Information sur la page actuelle",
+        "description": "معلومات عن الصفحة الحالية",
         "placeholders": {
             "current": {
                 "type": "int"
@@ -68,19 +68,60 @@
             }
         }
     },
-    "hizbCompleted": "الحزب مكتمل",
-    "hizbCompletionMessage": "تهانينا ! لقد أكملت هذا الحزب.",
+    "hizbCompleted": "تم إكمال الحزب",
+    "hizbCompletionMessage": "تهانينا! لقد أكملت هذا الحزب.",
     "continueToNextHizb": "هل تريد المتابعة إلى الحزب التالي؟",
-    "markDayCompleted": "تحديد اليوم كمكتمل",
-    "continueReading": "متابعة",
-    "stayHere": "البقاء هنا",
-    "dayMarkedCompleted": "تم تحديد اليوم كمكتمل !",
+    "hizb60Completed": "تم إكمال الحزب 60",
+    "hizb60CompletionMessage": "تهانينا! لقد أكملت آخر حزب من القرآن.",
+    "continueToDuaa": "هل تريد المتابعة إلى دعاء ختم القرآن؟",
     "yes": "نعم",
     "no": "لا",
-    "hizb60Completed": "الحزب 60 مكتمل",
-    "hizb60CompletionMessage": "تهانينا ! لقد أكملت آخر حزب في القرآن.",
-    "continueToDuaa": "هل تريد المتابعة إلى دعاء ختم القرآن؟",
-    "khatmaCompleted": "الختمة مكتملة",
-    "khatmaCompletionMessage": "تهانينا ! لقد أكملت الختمة كاملة.",
-    "continueToNewKhatma": "هل تريد بدء ختمة جديدة؟"
+    "dayMarkedCompleted": "تم تحديد اليوم كمكتمل!",
+    "khatmaCompleted": "تم إكمال الختمة",
+    "khatmaCompletionMessage": "تهانينا! لقد أكملت الختمة الكاملة.",
+    "continueToNewKhatma": "هل تريد بدء ختمة جديدة؟",
+    "aboutAppTitle": "عن هذا التطبيق",
+    "aboutAppDescription": "ختمة فلاتر هو تطبيق حديث تم تطويره لتسهيل القراءة اليومية للقرآن الكريم حسب البرنامج التقليدي \"ختمة الإدارة\".",
+    "aboutAppObjectives": "أهداف التطبيق",
+    "aboutAppQuranReading": "قراءة القرآن : عرض صفحات القرآن مع التكبير والتنقل السلس",
+    "aboutAppDailyTracking": "المتابعة اليومية : حساب الأحزاب التي يجب قراءتها كل يوم تلقائياً",
+    "aboutAppTemporalNavigation": "التنقل الزمني : السماح بالتنقل بين الأيام الماضية والمستقبلية",
+    "aboutAppCompleteList": "القائمة الكاملة : عرض جميع الأحزاب الستين مع تفاصيلها",
+    "aboutAppCompletionDuaa": "دعاء الختم : تضمين دعاء ختم القرآن الكريم الكامل",
+    "aboutAppKhatmaDates": "تواريخ الختمات : حساب وعرض التواريخ القادمة",
+    "aboutAppMultilingual": "الميزات متعددة اللغات",
+    "aboutAppMultilingualDesc": "دعم كامل بالفرنسية والعربية والإنجليزية",
+    "aboutAppLanguageChange": "تغيير اللغة ديناميكياً",
+    "aboutAppInterfaceAdapted": "واجهة متكيفة مع كل ثقافة",
+    "aboutAppPersonalization": "التخصيص",
+    "aboutAppLightDarkMode": "الوضع الفاتح والوضع المظلم",
+    "aboutAppAdaptiveThemes": "السمات المتكيفة",
+    "aboutAppModernInterface": "واجهة حديثة وبديهية",
+    "aboutAppCompatibility": "التوافق",
+    "aboutAppAndroid": "أندرويد (الهواتف والأجهزة اللوحية)",
+    "aboutAppIOS": "آي أو إس (آيفون وآيباد)",
+    "aboutAppWindows": "ويندوز (أجهزة الكمبيوتر)",
+    "aboutAppMacOS": "ماك أو إس (ماك)",
+    "aboutAppLinux": "لينكس (أجهزة الكمبيوتر)",
+    "aboutAppTechnicalFeatures": "الميزات التقنية",
+    "aboutAppSQLite": "قاعدة بيانات محلية SQLite",
+    "aboutAppOfflineMode": "وضع عدم الاتصال الكامل",
+    "aboutAppImageSharing": "مشاركة الصور والمستندات",
+    "aboutAppPDFExport": "تصدير PDF للدعاء",
+    "aboutAppAutoBackup": "النسخ الاحتياطي التلقائي للتفضيلات",
+    "aboutAppPerformance": "الأداء",
+    "aboutAppFastLoading": "تحميل سريع للصور",
+    "aboutAppSmoothNavigation": "تنقل سلس",
+    "aboutAppMemoryOptimization": "تحسين الذاكرة",
+    "aboutAppResponsiveInterface": "واجهة مستجيبة",
+    "aboutAppDevelopment": "التطوير",
+    "aboutAppFlutterFramework": "إطار عمل فلاتر الحديث",
+    "aboutAppModularArchitecture": "هندسة معيارية",
+    "aboutAppMaintainableCode": "كود قابل للصيانة والتوسيع",
+    "aboutAppTestsDocumentation": "الاختبارات والتوثيق",
+    "aboutAppSupport": "الدعم",
+    "aboutAppIntuitiveInterface": "واجهة بديهية",
+    "aboutAppErrorHandling": "معالجة الأخطاء بأمان",
+    "aboutAppHelpMessages": "رسائل المساعدة السياقية",
+    "aboutAppRegularUpdates": "التحديثات المنتظمة"
 }
