--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,7 +6,7 @@
     "hizbList": "Hizb List",
     "khatmaDates": "Next Khatma Dates",
     "quranRecitation": "Quran Completion Duaa",
-    "aboutKhatma": "About Khatma",
+    "aboutKhatma": "About the application",
     "aboutUs": "About Us",
     "quranReadingTitle": "Quran Reading (Section {id})",
     "@quranReadingTitle": {
@@ -68,19 +68,60 @@
             }
         }
     },
-    "hizbCompleted": "Hizb Completed",
+    "hizbCompleted": "Hizb completed",
     "hizbCompletionMessage": "Congratulations! You have completed this hizb.",
-    "continueToNextHizb": "Would you like to continue to the next hizb?",
-    "markDayCompleted": "Mark Day as Completed",
-    "continueReading": "Continue",
-    "stayHere": "Stay Here",
-    "dayMarkedCompleted": "Day marked as completed!",
+    "continueToNextHizb": "Do you want to continue to the next hizb?",
+    "hizb60Completed": "Hizb 60 completed",
+    "hizb60CompletionMessage": "Congratulations! You have completed the last hizb of the Quran.",
+    "continueToDuaa": "Do you want to continue to the Khatm Al-Quran Duaa?",
     "yes": "Yes",
     "no": "No",
-    "hizb60Completed": "Hizb 60 Completed",
-    "hizb60CompletionMessage": "Congratulations! You have completed the last hizb of the Quran.",
-    "continueToDuaa": "Would you like to continue to the Duaa of Khatm Al-Quran?",
-    "khatmaCompleted": "Khatma Completed",
-    "khatmaCompletionMessage": "Congratulations! You have completed the full Khatma.",
-    "continueToNewKhatma": "Would you like to start a new Khatma?"
+    "dayMarkedCompleted": "Day marked as completed!",
+    "khatmaCompleted": "Khatma completed",
+    "khatmaCompletionMessage": "Congratulations! You have completed the complete Khatma.",
+    "continueToNewKhatma": "Do you want to start a new Khatma?",
+    "aboutAppTitle": "About this application",
+    "aboutAppDescription": "Khatma Flutter is a modern application developed to facilitate daily Quran reading according to the traditional \"ختمة الإدارة\" (Administration Khatma) program.",
+    "aboutAppObjectives": "Application objectives",
+    "aboutAppQuranReading": "Quran Reading : Display Quran pages with zoom and smooth navigation",
+    "aboutAppDailyTracking": "Daily tracking : Automatically calculate hizb to read each day",
+    "aboutAppTemporalNavigation": "Temporal navigation : Allow navigation between past and future days",
+    "aboutAppCompleteList": "Complete list : Display all 60 hizb with their details",
+    "aboutAppCompletionDuaa": "Completion dua'a : Include the complete Khatm Al-Quran dua'a",
+    "aboutAppKhatmaDates": "Khatma dates : Calculate and display upcoming dates",
+    "aboutAppMultilingual": "Multilingual features",
+    "aboutAppMultilingualDesc": "Complete support in French, Arabic and English",
+    "aboutAppLanguageChange": "Dynamic language switching",
+    "aboutAppInterfaceAdapted": "Interface adapted to each culture",
+    "aboutAppPersonalization": "Personalization",
+    "aboutAppLightDarkMode": "Light and dark mode",
+    "aboutAppAdaptiveThemes": "Adaptive themes",
+    "aboutAppModernInterface": "Modern and intuitive interface",
+    "aboutAppCompatibility": "Compatibility",
+    "aboutAppAndroid": "Android (phones and tablets)",
+    "aboutAppIOS": "iOS (iPhone and iPad)",
+    "aboutAppWindows": "Windows (computers)",
+    "aboutAppMacOS": "macOS (Mac)",
+    "aboutAppLinux": "Linux (computers)",
+    "aboutAppTechnicalFeatures": "Technical features",
+    "aboutAppSQLite": "Local SQLite database",
+    "aboutAppOfflineMode": "Complete offline mode",
+    "aboutAppImageSharing": "Image and document sharing",
+    "aboutAppPDFExport": "PDF export of dua'a",
+    "aboutAppAutoBackup": "Automatic preference backup",
+    "aboutAppPerformance": "Performance",
+    "aboutAppFastLoading": "Fast image loading",
+    "aboutAppSmoothNavigation": "Smooth navigation",
+    "aboutAppMemoryOptimization": "Memory optimization",
+    "aboutAppResponsiveInterface": "Responsive interface",
+    "aboutAppDevelopment": "Development",
+    "aboutAppFlutterFramework": "Modern Flutter framework",
+    "aboutAppModularArchitecture": "Modular architecture",
+    "aboutAppMaintainableCode": "Maintainable and extensible code",
+    "aboutAppTestsDocumentation": "Tests and documentation",
+    "aboutAppSupport": "Support",
+    "aboutAppIntuitiveInterface": "Intuitive interface",
+    "aboutAppErrorHandling": "Graceful error handling",
+    "aboutAppHelpMessages": "Contextual help messages",
+    "aboutAppRegularUpdates": "Regular updates"
 } 
