--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -6,7 +6,7 @@
     "hizbList": "Liste des Ahzab",
     "khatmaDates": "Dates des prochaines Khatmas",
     "quranRecitation": "Duaa Khatm Al-Quran",
-    "aboutKhatma": "À propos de la Khatma",
+    "aboutKhatma": "À propos de l'application",
     "aboutUs": "À propos de nous",
     "quranReadingTitle": "Lecture du Coran (Section {id})",
     "@quranReadingTitle": {
@@ -71,16 +71,57 @@
     "hizbCompleted": "Hizb terminé",
     "hizbCompletionMessage": "Félicitations ! Vous avez terminé ce hizb.",
     "continueToNextHizb": "Voulez-vous continuer vers le hizb suivant ?",
-    "markDayCompleted": "Marquer la journée terminée",
-    "continueReading": "Continuer",
-    "stayHere": "Rester ici",
-    "dayMarkedCompleted": "Journée marquée comme terminée !",
-    "yes": "Oui",
-    "no": "Non",
     "hizb60Completed": "Hizb 60 terminé",
     "hizb60CompletionMessage": "Félicitations ! Vous avez terminé le dernier hizb du Coran.",
     "continueToDuaa": "Voulez-vous continuer vers le Duaa de Khatm Al-Quran ?",
+    "yes": "Oui",
+    "no": "Non",
+    "dayMarkedCompleted": "Journée marquée comme terminée !",
     "khatmaCompleted": "Khatma terminée",
     "khatmaCompletionMessage": "Félicitations ! Vous avez terminé la Khatma complète.",
-    "continueToNewKhatma": "Voulez-vous commencer une nouvelle Khatma ?"
+    "continueToNewKhatma": "Voulez-vous commencer une nouvelle Khatma ?",
+    "aboutAppTitle": "À propos de cette application",
+    "aboutAppDescription": "Khatma Flutter est une application moderne développée pour faciliter la lecture quotidienne du Coran selon le programme traditionnel \"ختمة الإدارة\" (Khatma de l'Administration).",
+    "aboutAppObjectives": "Objectifs de l'application",
+    "aboutAppQuranReading": "Lecture du Coran : Afficher les pages du Coran avec zoom et navigation fluide",
+    "aboutAppDailyTracking": "Suivi quotidien : Calculer automatiquement les hizb à lire chaque jour",
+    "aboutAppTemporalNavigation": "Navigation temporelle : Permettre de naviguer entre les jours passés et futurs",
+    "aboutAppCompleteList": "Liste complète : Afficher tous les 60 hizb avec leurs détails",
+    "aboutAppCompletionDuaa": "Dua'a de fin : Inclure le dua'a complet de Khatm Al-Quran",
+    "aboutAppKhatmaDates": "Dates des Khatmas : Calculer et afficher les prochaines dates",
+    "aboutAppMultilingual": "Fonctionnalités multilingues",
+    "aboutAppMultilingualDesc": "Support complet en français, arabe et anglais",
+    "aboutAppLanguageChange": "Changement dynamique de langue",
+    "aboutAppInterfaceAdapted": "Interface adaptée à chaque culture",
+    "aboutAppPersonalization": "Personnalisation",
+    "aboutAppLightDarkMode": "Mode clair et mode sombre",
+    "aboutAppAdaptiveThemes": "Thèmes adaptatifs",
+    "aboutAppModernInterface": "Interface moderne et intuitive",
+    "aboutAppCompatibility": "Compatibilité",
+    "aboutAppAndroid": "Android (téléphones et tablettes)",
+    "aboutAppIOS": "iOS (iPhone et iPad)",
+    "aboutAppWindows": "Windows (ordinateurs)",
+    "aboutAppMacOS": "macOS (Mac)",
+    "aboutAppLinux": "Linux (ordinateurs)",
+    "aboutAppTechnicalFeatures": "Fonctionnalités techniques",
+    "aboutAppSQLite": "Base de données locale SQLite",
+    "aboutAppOfflineMode": "Mode hors ligne complet",
+    "aboutAppImageSharing": "Partage d'images et de documents",
+    "aboutAppPDFExport": "Export PDF du dua'a",
+    "aboutAppAutoBackup": "Sauvegarde automatique des préférences",
+    "aboutAppPerformance": "Performance",
+    "aboutAppFastLoading": "Chargement rapide des images",
+    "aboutAppSmoothNavigation": "Navigation fluide",
+    "aboutAppMemoryOptimization": "Optimisation mémoire",
+    "aboutAppResponsiveInterface": "Interface réactive",
+    "aboutAppDevelopment": "Développement",
+    "aboutAppFlutterFramework": "Framework Flutter moderne",
+    "aboutAppModularArchitecture": "Architecture modulaire",
+    "aboutAppMaintainableCode": "Code maintenable et extensible",
+    "aboutAppTestsDocumentation": "Tests et documentation",
+    "aboutAppSupport": "Support",
+    "aboutAppIntuitiveInterface": "Interface intuitive",
+    "aboutAppErrorHandling": "Gestion d'erreurs gracieuse",
+    "aboutAppHelpMessages": "Messages d'aide contextuels",
+    "aboutAppRegularUpdates": "Mises à jour régulières"
 }
